--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
